# PicoNuclear

./: .gitignore  MANIFEST.in  README.md  README.txt  TODO  setup.cfg  setup.py
PicoNuclear/: pico3000a.py  tools.py
config/: default.xml
demo/: demo_data.txt
docs/: config_example.xml  miniPET.desktop
src/PicoNuclear/: pico3000a.py  tools.py
src/PicoNuclear/data/: betagamma.xml  default.xml  demo_data.txt
