[metadata]
name = PicoNuclear
version = 0.2.0
author = Krzysztof Miernik
author_email = kamiernik@gmail.com
description= Front-end for picoscope to be used for nuclear physics related projects setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kmiernik/PicoNuclear
project_urls =
    Bug Tracker = https://github.com/kmiernik/PicoNuclear/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Linux
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
package_dir =
    = src
packages = find:
include_package_data = True
scripts =
    src/bin/miniPET.py
    src/bin/pico_capture.py
python_requires = >=3.6

[options.packages.find]
where = src
